--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <title>sophie groenwold</title>
-        //comment 7
+        <title>sophie groenwold!</title>
+        //comment 8
     </body>
 </html>
