added resume and details

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                     <hr noshade>
 
-                    <p class = "block"> I'm a Regent's scholar at UC Santa Barbara, 
+                    <p class = "block">I'm a Regent's scholar at UC Santa Barbara, 
                         where I'm in my second year studying Computer Science.</p>
 
                     <!-- 
@@ -28,13 +28,17 @@
 
                     <p class = "block">
                         <i><font color = "black">I'm also currently </font></i><br>
-                        &nbsp; » research (tbd)<br>
+                        &nbsp; » in the <a class = link href = "https://sites.google.com/site/erspucsb/">
+                        CS Early Research Scholars Program</a><br>
                         &nbsp; » the Outreach chair of 
                            <a class = link href = "https://ucsbswe.weebly.com/">SWE UCSB</a> <br>
                         &nbsp; » the Marketing Team's External Outreach chair <br> &nbsp; for 
                            <a class = link href = "https://www.womxnhacks.com/">Womxn/Hacks</a> <br>
                     </p>
-                 </p>
+                 
+                    <p class = "block">// <a class = link target = "_blank" href = "file:///Users/sophiegroenwold/Documents/sophiegroenwold.github.io/images/resume.pdf">
+                        resume</a></p>
+
             </div>
         </div>
 
