resume problem fix 1

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                            <a class = link href = "https://www.womxnhacks.com/">Womxn/Hacks</a> <br>
                     </p>
                  
-                    <p class = "block">// <a class = link target = "_blank" href = "http://www.sophiegroenwold.github.io/Resume.pdf">
+                    <p class = "block">// <a class = link target = "_blank" href = "resume.pdf">
                         resume</a></p>
 
             </div>
