open worded links in new tab

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
                     <p class = "block">
                         <i><font color = "black">I'm also currently </font></i><br>
-                        &nbsp; » in the <a class = link href = "https://sites.google.com/site/erspucsb/">
+                        &nbsp; » in the <a class = link target = "_blank" href = "https://sites.google.com/site/erspucsb/">
                         CS Early Research Scholars Program</a><br>
                         &nbsp; » the Outreach chair of 
-                           <a class = link href = "https://ucsbswe.weebly.com/">SWE UCSB</a> <br>
+                           <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">SWE UCSB</a> <br>
                         &nbsp; » the Marketing Team's External Outreach chair <br> &nbsp; for 
-                           <a class = link href = "https://www.womxnhacks.com/">Womxn/Hacks</a> <br>
+                           <a class = link target = "_blank" href = "https://www.womxnhacks.com/">Womxn/Hacks</a> <br>
                     </p>
                  
                     <p class = "block">// <a class = link target = "_blank" href = "resume.pdf">
