updated stylistic things, like line height, font

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <a href = "http://sophiegroenwold.github.io">Sophie Groenwold</a>
                     </h1>
 
-                    <hr noshade>
+                    <hr class = "new" noshade>
 
                     <p class = "block">I'm a Regent's scholar at UC Santa Barbara, 
                         where I'm in my second year studying Computer Science.</p>
@@ -28,10 +28,16 @@
 
                     <p class = "block">
                         <i><font color = "black">I'm also currently </font></i><br>
+                    </p>
+                    <p class = "block">
                         &nbsp; » in the <a class = link target = "_blank" href = "https://sites.google.com/site/erspucsb/">
                         CS Early Research Scholars Program</a><br>
+                    </p>
+                    <p class = "block">
                         &nbsp; » the Outreach chair of 
                            <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">SWE UCSB</a> <br>
+                    </p>
+                    <p class = "block">
                         &nbsp; » the Marketing Team's External Outreach chair <br> &nbsp; for 
                            <a class = link target = "_blank" href = "https://www.womxnhacks.com/">Womxn/Hacks</a> <br>
                     </p>
