fixed small line update

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                            <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">SWE UCSB</a> <br>
                     </p>
                     <p class = "block">
-                        &nbsp; » the Marketing Team's External Outreach chair <br> &nbsp; for 
-                           <a class = link target = "_blank" href = "https://www.womxnhacks.com/">Womxn/Hacks</a> <br>
+                        &nbsp; » the Marketing Team's External Outreach chair for 
+                           <a class = link target = "_blank" href = "https://www.womxnhacks.com/">&nbsp;&nbsp;Womxn/Hacks</a> <br>
                     </p>
                  
                     <p class = "block">// <a class = link target = "_blank" href = "resume.pdf">
