update info and center h1

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <link rel="stylesheet" type="text/css" href="style.css">
 
         <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
@@ -30,16 +31,17 @@
                         <i><font color = "black">I'm also currently </font></i><br>
                     </p>
                     <p class = "block">
-                        &nbsp; » in the <a class = link target = "_blank" href = "https://sites.google.com/site/erspucsb/">
-                        CS Early Research Scholars Program</a><br>
+                        &nbsp; » part of the <a class = link target = "_blank" href = "http://nlp.cs.ucsb.edu/">UCSB NLP Group</a> through
+                        <a class = link target = "_blank" href = "https://sites.google.com/site/erspucsb/">
+                        CS ERSP</a><br>
                     </p>
                     <p class = "block">
                         &nbsp; » the Outreach chair of 
                            <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">SWE UCSB</a> <br>
                     </p>
                     <p class = "block">
-                        &nbsp; » the Marketing Team's External Outreach chair for 
-                           <a class = link target = "_blank" href = "https://www.womxnhacks.com/">&nbsp;&nbsp;Womxn/Hacks</a> <br>
+                        &nbsp; » on the Marketing Team for 
+                           <a class = link target = "_blank" href = "https://www.womxnhacks.com/">Womxn/Hacks</a> <br>
                     </p>
                  
                     <p class = "block">// <a class = link target = "_blank" href = "resume.pdf">
