removed color change script, updated SWE title on resume & index.html

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                         CS ERSP</a><br>
                     </p>
                     <p class = "block">
-                        &nbsp; » the Outreach chair of 
-                           <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">SWE UCSB</a> <br>
+                        &nbsp; » the External VP & Outreach Chair of 
+                           <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">UCSB SWE</a> <br>
                     </p>
                     <p class = "block">
-                        &nbsp; » on the Marketing Team for 
+                        &nbsp; » part of the Marketing Team for 
                            <a class = link target = "_blank" href = "https://www.womxnhacks.com/">Womxn/Hacks</a> <br>
                     </p>
                  
@@ -89,7 +89,7 @@
             </div>
         </div>
 
-        <script>
+        <!-- <script>
                 function getRandomColor() {
                      var letters = '0123456789ABCDEF';
                      var color = '#';
@@ -108,7 +108,7 @@
                  div.onmouseout = function() {
                      this.style.color = 'black';
                  }; 
-        </script>
+        </script> -->
 
         <div class = "container2">
             
