more font changes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap" rel="stylesheet">
         
     </head>
 
@@ -122,15 +123,15 @@
                     <p class = "block">
                         &nbsp; <small>></small> part of the <a class = link target = "_blank" href = "http://nlp.cs.ucsb.edu/">UCSB NLP Group</a> through
                         <a class = link target = "_blank" href = "https://sites.google.com/site/erspucsb/">
-                        CS ERSP</a><br>
+                        CS ERSP</a>
                     </p>
                     <p class = "block">
                         &nbsp; <small>></small> the External VP & Outreach Chair of 
-                           <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">UCSB SWE</a> <br>
+                           <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">UCSB SWE</a>
                     </p>
                     <p class = "block">
                         &nbsp; <small>></small> part of the Marketing Team for 
-                           <a class = link target = "_blank" href = "https://www.womxnhacks.com/">Womxn/Hacks</a> <br>
+                           <a class = link target = "_blank" href = "https://www.womxnhacks.com/">Womxn/Hacks</a>
                     </p>
 
                     <div class = "lowBlock">
