added book titles

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         where I'm a rising third year pursuing a B.S. in Computer Science.</p>
 
                     <p class = "block">I love exploring the intersection of computer science with language and design. 
-                        In my free time, I dance and read (& add books to my <a class = link href="reading-list.html" target="_self">bookshelf</a>).
+                        In my free time, I dance and read (& add books to my <a class = link href="bookshelf.html" target="_self">bookshelf</a>).
                     </p>
 
                     <!-- 
