--- a/bookshelf.html
+++ b/bookshelf.html
@@ -75,9 +75,10 @@
                     <h2>Recommendations</h2>
 
                     <p class = "block2">
+                        &nbsp; <small>•</small> <i><a class = link href="https://www.goodreads.com/book/show/11529868-the-orphan-master-s-son?ac=1&from_search=true&qid=CITPL3oCgX&rank=1" target="_blank">The Orphan Master's Son</a></i><span class = "date">&nbsp;... 7.20</span> <br>
+                        &nbsp; <small>•</small> <i><a class = link href="https://www.goodreads.com/book/show/4929.Kafka_on_the_Shore?ac=1&from_search=true&qid=RqltjcgzrK&rank=1" target="_blank">Kafka on the Shore</a></i><span class = "date">&nbsp;... 6.20</span> <br>
                         &nbsp; <small>•</small> <i><a class = link href="https://www.goodreads.com/book/show/32487617-beneath-a-scarlet-sky" target="_blank">Beneath a Scarlet Sky</a></i><span class = "date">&nbsp;... 5.20</span> <br>
                         &nbsp; <small>•</small> <i><a class = link href="https://www.goodreads.com/book/show/35953464-broad-band?from_search=true&from_srp=true&qid=9hOWS3MMvm&rank=1" target="_blank">Broad Band</a></i><span class = "date">&nbsp;... 5.20</span> <br>
-                        &nbsp; <small>•</small> <i><a class = link href="https://www.goodreads.com/book/show/4929.Kafka_on_the_Shore?ac=1&from_search=true&qid=RqltjcgzrK&rank=1" target="_blank">Kafka on the Shore</a></i><span class = "date">&nbsp;... 6.20</span> <br>
                         &nbsp; <small>•</small> <i><a class = link href="https://www.goodreads.com/book/show/43848929-talking-to-strangers?ac=1&from_search=true&qid=3ND9BbL6pM&rank=2" target="_blank">Talking to Strangers</a></i><span class = "date">&nbsp;... 1.20</span> <br>
                         &nbsp; <small>•</small> <i><a class = link href="https://www.goodreads.com/book/show/1898.Into_Thin_Air?ac=1&from_search=true&qid=zxGs0vZOWo&rank=1" target="_blank">Into Thin Air</a></i><span class = "date">&nbsp;... 1.20</span> <br>
                         &nbsp; <small>•</small> <i><a class = link href="https://www.goodreads.com/book/show/18143977-all-the-light-we-cannot-see?ac=1&from_search=true&qid=I0igFpZCNW&rank=1" target="_blank">All the Light We Cannot See</a></i><span class = "date">&nbsp;... 9.19</span> <br>
@@ -102,8 +103,8 @@
                     <h2>Queue</h2>
 
                     <p class = "block3">
-                        &nbsp; <small>•</small> <i><a class = link href="https://www.goodreads.com/book/show/11529868-the-orphan-master-s-son?ac=1&from_search=true&qid=CITPL3oCgX&rank=1" target="_blank">The Orphan Master's Son</a></i> <br>
                         &nbsp; <small>•</small> <i><a class = link href="https://www.goodreads.com/book/show/13214.I_Know_Why_the_Caged_Bird_Sings?ac=1&from_search=true&qid=gCiyMT0raU&rank=1" target="_blank">I Know Why the Caged Bird Sings</a></i> <br>
+                        &nbsp; <small>•</small> <i><a class = link href="https://www.goodreads.com/book/show/55030.Cosmos" target="_blank">Cosmos</a></i> <br>
                         &nbsp; <small>•</small> <i><a class = link href="https://www.goodreads.com/book/show/37703550-where-the-crawdads-sing" target="_blank">Where the Crawdads Sing</a></i> <br>
                     </p>
 
