resume + description update

--- a/index.html
+++ b/index.html
@@ -135,20 +135,21 @@
                     
                     <div id = "toggleInfo">
                         <div id = "toggleInfo1">
-                            I'm exploring web development through an Agile lens by utilizing SAFe (Scaled Agile Framework).
+                            <!-- I'm exploring web development through an Agile lens by utilizing SAFe (Scaled Agile Framework). -->
+                            I'm collaborating with developers and Agile Release Train (ART) engineers to explore software development from both programming and project management perspectives.
                         </div>
                     </div>
 
                     <p class = "block">
-                        &nbsp; <input id = "toggleButton2" type="button" onclick="toggle(this.id)" value="•"></input> part of the <a class = link target = "_blank" href = "http://nlp.cs.ucsb.edu/">UCSB NLP Group</a> through
-                        <a class = link target = "_blank" href = "https://sites.google.com/site/erspucsb/">
-                        CS ERSP</a>
+                        &nbsp; <input id = "toggleButton2" type="button" onclick="toggle(this.id)" value="•"></input> part of the <a class = link target = "_blank" href = "http://nlp.cs.ucsb.edu/">UCSB NLP Group</a>
                     </p>
 
                     <div id = "toggleInfo">
                         <div id = "toggleInfo2">
                             I'm analyzing the efficacy of state-of-the-art NLP technologies on variations of language, with a focus on
                             Transformer-based models.
+                            <br><br>
+                            I'm also preparing for EMNLP 2020, where my team's work "Investigating African-American Vernacular English in Transformer-Based Text Generation" will appear.
                         </div>
                     </div>
 
