half redone text + styling

--- a/index.html
+++ b/index.html
@@ -115,27 +115,33 @@
 
                     <!-- BEGIN DESCRIPTION -->
 
-                    <p class = "block">I'm a Regent's scholar at UC Santa Barbara, 
-                        where I'm a rising third year pursuing a B.S. in Computer Science.</p>
+                    <p class = "block">Hi! I'm Sophie, a student at UC Santa Barbara, where I'm in my third year studying computer science. 
+                        Lately, I've been wfh out of Los Angeles, CA.</p>
 
-                    <p class = "block">I love exploring the intersection of computer science with language and design. 
-                        In my free time, I dance and read (& add books to my <a class = link href="bookshelf.html" target="_self">bookshelf</a>).
+                    <p class = "block">I'm interested exploring the intersection of computer science with language and design; check out 
+                        my <a class = link target = "_blank" href = "resume.pdf">resume</a>.
+                        <!-- <a class = link href="bookshelf.html" target="_self">bookshelf</a>). -->
                     </p>
 
                     <!-- BEGIN CURRENTLIES -->
 
                     <p class = "block">
-                        I'm also currently:
+                        I'm also currently
                     </p>
 
                     <p class = "block">
+                        • working with my team in the <a class = link target = "_blank" href = "http://nlp.cs.ucsb.edu/">UCSB NLP Group</a> on 
+                        computational social science issues.  Our <a class = link target = "_blank" href = "https://www.aclweb.org/anthology/2020.emnlp-main.473/">work</a>
+                        was recently accepted to EMNLP 2020!
+                    </p>
+
+                    <!-- <p class = "block">
                         &nbsp; <input id = "toggleButton1" type="button" onclick="toggle(this.id)" value="•"></input> a Web Development Intern at 
                         <a class = link target = "_blank" href = "https://www.guardianlife.com/careers/corporate/internships">Guardian Life</a>
                     </p>
                     
                     <div id = "toggleInfo">
                         <div id = "toggleInfo1">
-                            <!-- I'm exploring web development through an Agile lens by utilizing SAFe (Scaled Agile Framework). -->
                             I'm collaborating with developers and Agile Release Train (ART) engineers to explore software development from both programming and project management perspectives.
                         </div>
                     </div>
@@ -155,14 +161,19 @@
 
                     <p class = "block">
                         &nbsp; <input id = "toggleButton3" type="button" onclick="toggle(this.id)" value="•"></input> the External Vice President of 
-                           <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">UCSB Society of Women Engineers</a>
+                            <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">UCSB Society of Women Engineers</a>
                     </p>
 
                     <div id = "toggleInfo">
                         <div id = "toggleInfo3">
                             I'm SWE's point of reference for professional communications, and I organize our annual Evening with Industry.
                         </div>
-                    </div>
+                    </div> -->
+
+                    <p class = "block">
+                    In my free time, I dance (I was a ballet dancer for 10+ years!) and read memoirs, historical fiction, and crime novels
+                        (or more accurately, add those books to my bookshelf). 
+                    </p>
 
                     <!-- BEGIN RESUME & SONG PLAYER -->
 
@@ -183,7 +194,7 @@
             </div>
         </div>
 
-        <script>
+        <!-- <script>
 
             function toggle(button_id) {
                 var elem = document.getElementById(button_id);
@@ -217,7 +228,7 @@
                         $('#toggleInfo3').slideToggle(300);
                 });
             });
-        </script>
+        </script> -->
 
     </body>
 </html>
