small changes to text & icon

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <!-- BEGIN DESCRIPTION -->
 
                     <p class = "block">Hi! I'm Sophie, a student at UC Santa Barbara, where I'm in my third year studying computer science. 
-                        Lately, I've been wfh out of Los Angeles, CA.</p>
+                        Lately, I've been wfh-not-from-home out of Santa Barbara, CA.</p>
 
                     <p class = "block">I'm interested exploring the intersection of CS with language and design; check out 
                         my <a class = link target = "_blank" href = "resume.pdf">resume</a>.
