--- a/index.html
+++ b/index.html
@@ -115,46 +115,31 @@
 
                     <!-- BEGIN DESCRIPTION -->
 
-                    <p class = "block">Hi! I'm Sophie, a student at UC Santa Barbara, where I'm in my third year studying computer science. 
+                    <p class = "block">Hi! I'm Sophie (she/her), a computer science student at UC Santa Barbara. 
                         Lately, I've been wfh-not-from-home out of Santa Barbara, CA.</p>
 
-                    <p class = "block">I'm interested exploring the intersection of CS with language and design; check out 
-                        my <a class = link target = "_blank" href = "resume.pdf">resume</a>.
+                    <p class = "block">Here's my <a class = link target = "_blank" href = "resume.pdf">resume</a>.
                         <!-- <a class = link href="bookshelf.html" target="_self">bookshelf</a>). -->
                     </p>
 
-                    <!-- BEGIN CURRENTLIES -->
+                    <p class = "block">Over the past year, I've worked with my team in the 
+                        <a class = link target = "_blank" href = "http://nlp.cs.ucsb.edu/">UCSB NLP Group</a> on
+                        issues within the realm of computational social science. Our interests have gone from linguistic diversity,
+                        to dialect performance in NLG, to measuring compound societal biases. You can see a sample of our work from EMNLP 2020 
+                        <a class = link target = "_blank" href = "https://www.aclweb.org/anthology/2020.emnlp-main.473/">here</a>.</p>
 
-                    <p class = "block">
-                        I'm also currently
-                    </p>
+                    <p class = "block">I also work to support womxn in STEM as the External VP of
+                        <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">UCSB's Society of Women Engineers</a>. I connect 
+                        our members with opportunities in industry and am the lead coordinator for our Evening with Industry, 
+                        an annual networking event that brings together 100+ students and company representatives. 
 
-                    <ul>
-                        <li>
-                        working with my team in the <a class = link target = "_blank" href = "http://nlp.cs.ucsb.edu/">UCSB NLP Group</a> on 
-                        computational social science issues.  Our <a class = link target = "_blank" href = "https://www.aclweb.org/anthology/2020.emnlp-main.473/">work</a>
-                        was recently accepted to EMNLP 2020!
-                        </li>
-                    </ul>
-
-                    <ul>
-                        <li>
-                        supporting womxn in STEM with the <a class = link target = "_blank" href = "https://ucsbswe.weebly.com/">UCSB Society of Women Engineers</a>.
-                        As External VP, I connect our members with opportunities in industry.
-                        </li>
-                    </ul>
-
-                    <span id = "songContainer">
-                        <ul>
-                            <li>
-                            listening to 
-                                <a class = link target = "_blank" href = "https://open.spotify.com/user/sophiegroenwold">
-                                    <span id = "mySong"></span>&nbsp;by&nbsp;<span id = "myArtist"></span>
-                                </a>
-                                &nbsp;
-                                <img src="images/music.gif" alt="musicGif"/>
-                            </li>
-                        </ul>
+                    <span id = "songContainer"></span>
+                        <p class = "block">Right now, I'm listening to 
+                            <a class = link target = "_blank" href = "https://open.spotify.com/user/sophiegroenwold">
+                                <span id = "mySong"></span>&nbsp;by&nbsp;<span id = "myArtist"></span>
+                            </a>
+                            <img src="images/music.gif" alt="musicGif"/>
+                        </p>
                     </span>
 
                     <p class = "block">
