small changes w showing player on load

--- a/index.html
+++ b/index.html
@@ -133,14 +133,15 @@
                         our members with opportunities in industry and am the lead coordinator for our Evening with Industry, 
                         an annual networking event that brings together 100+ students and company representatives. 
 
-                    <span id = "songContainer"></span>
-                        <p class = "block">Right now, I'm listening to 
+                    <p class = "block">
+                        <span id = "songContainer">Right now, I'm listening to 
                             <a class = link target = "_blank" href = "https://open.spotify.com/user/sophiegroenwold">
                                 <span id = "mySong"></span>&nbsp;by&nbsp;<span id = "myArtist"></span>
                             </a>
                             <img src="images/music.gif" alt="musicGif"/>
-                        </p>
-                    </span>
+                        </span>
+                    </p>
+
 
                     <p class = "block">
                     In my free time, I dance (I was a ballet dancer for 10+ years!) and read memoirs, historical fiction, and crime novels
