--- a/blog.html
+++ b/blog.html
@@ -94,7 +94,7 @@
 
                 <div class = "entry-container-2">
                     <a class = "linknocolor" target = "_blank" href ="blog1.html">
-                        This is another entry
+                        Redditometer
                     </a>
                     <div class = "project" id = "blog2">
                         project
