--- a/blog1.html
+++ b/blog1.html
@@ -18,7 +18,7 @@
 
     <div class = "container">
         <div class = "intro">
-            <title>Sophie Groenwold</title>
+            <title>Blog / Sophie Groenwold</title>
 
             <h1 id = "colorchange" onclick = "changeColor">
                 <a class = "nounderline" href = "http://sophiegroenwold.com">Sophie Groenwold</a>
@@ -77,7 +77,7 @@
             <h2>Children Should Not be the Target of Individualized Algorithms</h2>
 
             <p class = "block">
-                <i>1.29.20</i>
+                <i>1.29.21</i>
             </p>
 
             <p class = "block">
