--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <p class = "block">Hi! I'm Sophie (she/her), a computer science student at UC Santa Barbara. 
                         Lately, I've been wfh-not-from-home out of Santa Barbara, CA.</p>
 
-                    <p class = "block">Here's my <a class = link target = "_blank" href = "resume.pdf">resume</a>.
+                    <p class = "block">Here's my <a class = link href = "resume.pdf">resume</a>.
                         <!-- <a class = link href="bookshelf.html" target="_self">bookshelf</a>). -->
                     </p>
 
@@ -144,8 +144,8 @@
 
 
                     <p class = "block">
-                    In my free time, I dance (I was a ballet dancer for 10+ years!) and read memoirs, historical fiction, and crime novels
-                        (or more accurately, add those books to my bookshelf). 
+                    In my free time, I dance (I was a ballet dancer for 10+ years!), <a class = link href = "blog.html">write things</a>, and read 
+                        (or more accurately, add more books to my bookshelf). 
                     </p>
 
                     <p class = "block">
