--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="mobile_style.css">
         <script type="text/javascript" src="scripts/secrets.js"></script>
         <link rel="icon" href="purple.png">
 
@@ -61,7 +62,9 @@
                  <title>Sophie Groenwold</title>
 
                     <h1 id = "colorchange" onclick = "changeColor">
-                        <a class = "nounderline" href = "http://sophiegroenwold.com">Sophie Groenwold</a>
+                        <span id = "header_div">
+                            <a class = "nounderline" href = "http://sophiegroenwold.com">Sophie Groenwold</a>
+                        </span>
 
                         <!-- BEGIN LINKS  -->
                         
@@ -118,7 +121,7 @@
                     <p class = "block">Hi! I'm Sophie (she/her), a computer science student at UC Santa Barbara. 
                         Lately, I've been wfh-not-from-home out of Santa Barbara, CA.</p>
 
-                    <p class = "block">Here's my <a class = link href = "resume.pdf">resume</a>.
+                    <p class = "block">Here's my <a class = link target = "_blank" href = "resume.pdf">resume</a>.
                         <!-- <a class = link href="bookshelf.html" target="_self">bookshelf</a>). -->
                     </p>
 
@@ -144,8 +147,8 @@
 
 
                     <p class = "block">
-                    In my free time, I dance (I was a ballet dancer for 10+ years!), <a class = link href = "blog.html">write things</a>, and read 
-                        (or more accurately, add more books to my bookshelf). 
+                    In my free time, I dance (I was a ballet dancer for 10+ years!) and read memoirs, historical fiction, and crime novels
+                        (or more accurately, add those books to my bookshelf). 
                     </p>
 
                     <p class = "block">
